# doggy-toolbox

./: .gitignore  COMMIT_MESSAGE.txt  README.md  TEST_CASES.md  api.py  build.py  config.json  main.py  pyproject.toml  requirements.txt  test-page.html  verify_build.py  图标使用说明.md
.github/workflows/: build.yml
HTTP请求/: collections.json
docs/: DEVELOPMENT_PLAN.md
scripts/: frontend_split_audit.py  measure_startup_prepare.py  run_regression.sh  split_app_js.py  split_index_pages.py
services/: __init__.py  ai_manager.py  ai_providers.py  chat_history.py  computer_usage.py  data_migration.py  db_manager.py  http_collections.py  node_converter.py  prompt_template.py  web_search.py
test_http_collections/: collections.json
web/: app.js  index.html  styles.css  tools_m10_utils.js  tools_m15_utils.js  tools_m19_utils.js  tools_m20_utils.js  tools_m21_utils.js  tools_m22_utils.js  tools_m23_utils.js  tools_m24_utils.js  tools_m25_utils.js  tools_m26_utils.js  tools_m27_utils.js  tools_m28_utils.js  tools_m29_utils.js  tools_m2_utils.js  tools_m30_utils.js  tools_m31_utils.js  tools_m32_utils.js  tools_m35_utils.js  tools_m36_utils.js  tools_m37_utils.js  tools_m38_utils.js  tools_m39_utils.js  tools_m40_utils.js  tools_m41_utils.js  tools_m42_utils.js  tools_m43_utils.js  tools_m44_utils.js  tools_m8_utils.js
web/js/: app_ai_chat.js  app_ai_global_helper.js  app_ai_helper.js  app_ai_settings.js  app_computer_usage.js  app_core.js  app_http_collections.js  app_nodes_converter.js  app_prompt_templates.js  app_state.js  app_tools_a.js  app_tools_b.js  (+1 more)
转化节点/: nodes.md
(+71 files in other folders)
